feature/user-attributes-claim-mapping (#52)
* New migrations for attribute and mappers


* Users attribute implementation


* Tests for the users attributes and claims


* Test update for user


* Wire user custom claims into token and oauth service


* API updates for the user attribute and document openAPI


* Admin UI added to configure custom mappers and user attributes


* Semantic upgrade


* Generic examples and ui fixes

---------
